# smartest_car

./: .gitignore
fa_ROS2_ws/install/: local_setup.sh  setup.sh
fa_ROS2_ws/install/ackermann_msgs/share/ackermann_msgs/: local_setup.sh  package.sh
fa_ROS2_ws/install/car_gazebo_plugin/share/car_gazebo_plugin/: local_setup.sh  package.sh  package.xml
fa_ROS2_ws/install/smart_car/lib/smart_car/: joint_state_publisher.py
fa_ROS2_ws/install/smart_car/share/smart_car/: local_setup.sh  package.sh
fa_ROS2_ws/install/smart_car/share/smart_car/config/: nav2_parameters.yaml
fa_ROS2_ws/install/smart_car/share/smart_car/launch/: display.launch.py  nav2.launch.py
fa_ROS2_ws/install/smart_car/share/smart_car/urdf/: smartcar.urdf
fa_ROS2_ws/install/smartcar_msgs/share/smartcar_msgs/: package.sh  package.xml
fa_ROS2_ws/install/smartcar_msgs/share/smartcar_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_smartcar_msgs__rosidl_generator_cExport.cmake  export_smartcar_msgs__rosidl_generator_cppExport.cmake  (+4 more)
fa_ROS2_ws/log/: latest_build
fa_ROS2_ws/src/car_gazebo_plugin/: CMakeLists.txt
fa_ROS2_ws/src/smart_car/: CMakeLists.txt
fa_ROS2_ws/src/smart_car/config/: ekf.yaml
fa_ROS2_ws/src/smart_car/launch/: gazebo.launch.py  localization.launch.py  nav2.launch.py
fa_ROS2_ws/src/smart_car/rviz/: config.rviz
fa_ROS2_ws/src/smart_car/script/: wheel_odometry.py
fa_ROS2_ws/src/smart_car/urdf/: smartcar.urdf  smartcar.urdf.xacro
fa_ROS2_ws/src/smartcar_msgs/: CMakeLists.txt
fa_ROS2_ws/src/smartcar_msgs/msg/: Status.msg
(+1 files in other folders)
